refactored cooking list
