# internal/cooking_list/cooking_list_dto.go
@@ -1,19 +1,0 @@
-package cooking_list
-
-type CreateCookingListRequest struct {
-	RecipeID int `json:"recipeId"`
-}
-
-type AddRecipeToCookingListRequest struct {
-	RecipeID int `json:"recipeId"`
-}
-
-type CookingListItem struct {
-	RecipeID int `json:"recipeId"`
-	//RecipeName string `json:"recipeName"`
-}
-
-type CookingListResponse struct {
-	ID      int               `json:"id"`
-	Recipes []CookingListItem `json:"recipes"`
-}
