# internal/cooking_list/shopping_list_dto.go
@@ -1,5 +1,0 @@
-package cooking_list
-
-type ShoppingListResponse struct {
-	ShoppingList map[string]int `json:"shoppingList"`
-}
